[package]
name = "abna"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
description = "Automated retrieval of mutations from ABN Amro"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/djc/abna-rs"

[dependencies]
anyhow = "1.0"
aws-lc-rs = "1.15.2"
chrono = "0.4.42"
hex = "0.4"
reqwest = { version = "0.13", features = ["cookies", "default-tls", "json", "query"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
